# player-position-and-rating-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: add_rule_labels.py  build_positions.py  evaluate_models.py  feature_importance.py  label_positions.py  merge_player_data.py  train_models.py
src/soccer_rating/config/: labels.py
src/soccer_rating/evaluation/: compare.py
src/soccer_rating/features/: positions.py
src/soccer_rating/labeling/: kmeans_label.py  rule_based.py
src/soccer_rating/modeling/: config.py  frameworks.py  trainers.py
src/soccer_rating/viz/: plots.py
